// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`/rollup.js code splitting should correctly chunk up CSS files 1`] = `
Object {
  "assets/a.css": "
/* packages/rollup/test/specimens/css-dependencies/a.css */
.mc_a {
    color: aqua;
}
",
  "assets/b.css": "
/* packages/rollup/test/specimens/css-dependencies/b.css */
.mc_b {
    color: blue;
}
",
  "assets/c.css": "
/* packages/rollup/test/specimens/css-dependencies/c.css */
.mc_c {
    color: cyan;
}
",
}
`;

exports[`/rollup.js code splitting should output metadata successfully when unreferenced CSS is output to common 1`] = `
Object {
  "assets/a.css": "
/* packages/rollup/test/specimens/metadata/a.css */
.mc541d3f5c_a { color: aqua; }
",
  "assets/b.css": "
/* packages/rollup/test/specimens/metadata/b.css */
.mc04101138_b { color: blue; }
",
  "assets/d.css": "
/* packages/rollup/test/specimens/metadata/d.css */
.mc7de0d66b_d { color: darkkhaki; }
",
  "assets/fake.css": "
/* fake.css */
.mc2c838439_fake { color: red; }",
  "assets/metadata.json": "
{
    \\"a.js\\": {
        \\"assets\\": [
            \\"assets/a.css\\"
        ]
    },
    \\"b.js\\": {
        \\"assets\\": [
            \\"assets/b.css\\"
        ]
    },
    \\"d.js\\": {
        \\"assets\\": [
            \\"assets/d.css\\"
        ]
    }
}",
}
`;

exports[`/rollup.js code splitting should output only 1 JSON file 1`] = `
Object {
  "assets/dependencies.css": "
/* packages/rollup/test/specimens/dependencies.css */
.mc_wooga {
    background: blue;
}
",
  "assets/exports.json": "
{
    \\"packages/rollup/test/specimens/simple.css\\": {
        \\"str\\": \\"\\\\\\"string\\\\\\"\\",
        \\"fooga\\": \\"mc_fooga\\"
    },
    \\"packages/rollup/test/specimens/dependencies.css\\": {
        \\"wooga\\": \\"mc_fooga mc_wooga\\"
    }
}",
  "assets/simple.css": "
/* packages/rollup/test/specimens/simple.css */
.mc_fooga {
    color: red;
}
",
}
`;

exports[`/rollup.js code splitting should support circular JS dependencies 1`] = `
Object {
  "a.js": "
export { a as default } from './a2.js';
",
  "a2.js": "
const b = \\"mc_b\\";
var css = {
    \\"b\\" : b
};

console.log(css, a$1);

var b$1 = \\"b\\";

const a = \\"mc_a\\";
var css$1 = {
    \\"a\\" : a
};

console.log(css$1, b$1);

var a$1 = \\"a\\";

export { a$1 as a, b$1 as b };
",
  "assets/a.css": "
/* packages/rollup/test/specimens/circular-dependencies/b.css */
.mc_b { color: blue; }
/* packages/rollup/test/specimens/circular-dependencies/a.css */
.mc_a { color: aqua; }
",
  "b.js": "
export { b as default } from './a2.js';
",
}
`;

exports[`/rollup.js code splitting should support deduping names via rollup (hashed) 1`] = `
Object {
  "assets/a-2fa3ffad.css": "
/* packages/rollup/test/specimens/multiple-chunks/subfolder/a.css */
.mc_a { color: azure; }",
  "assets/a-6ea612fe.css": "
/* packages/rollup/test/specimens/multiple-chunks/a.css */
.mc_a {
    color: aqua;
}
",
  "assets/b-78869a3c.css": "
/* packages/rollup/test/specimens/multiple-chunks/b.css */
.mc_b {
    color: blue;
}
",
}
`;

exports[`/rollup.js code splitting should support deduping names via rollup (not hashed) 1`] = `
Object {
  "assets/a.css": "
/* packages/rollup/test/specimens/multiple-chunks/a.css */
.mc_a {
    color: aqua;
}
",
  "assets/a2.css": "
/* packages/rollup/test/specimens/multiple-chunks/subfolder/a.css */
.mc_a { color: azure; }",
  "assets/b.css": "
/* packages/rollup/test/specimens/multiple-chunks/b.css */
.mc_b {
    color: blue;
}
",
}
`;

exports[`/rollup.js code splitting should support dynamic imports 1`] = `
Object {
  "assets/a.css": "
/* packages/rollup/test/specimens/dynamic-imports/a.css */
.mc_a {
    color: aqua;
}
",
  "assets/b.css": "
/* packages/rollup/test/specimens/dynamic-imports/e.css */
.mc_e {
    color: #EEE;
}
/* packages/rollup/test/specimens/dynamic-imports/b.css */
.mc_b {
    color: blue;
}
",
  "assets/c.css": "
/* packages/rollup/test/specimens/dynamic-imports/c.css */
.mc_c {
    color: cyan;
}
",
  "assets/d.css": "
/* packages/rollup/test/specimens/dynamic-imports/f.css */
.mc_f {
    color: floralwhite;
}
/* packages/rollup/test/specimens/dynamic-imports/d.css */
.mc_d {
    color: darkred;
}
",
}
`;

exports[`/rollup.js code splitting should support manual chunks 1`] = `
Object {
  "assets/a.css": "
/* packages/rollup/test/specimens/manual-chunks/a.css */
.mc_a {
    color: red;
}
",
  "assets/b.css": "
/* packages/rollup/test/specimens/manual-chunks/b.css */
.mc_b {
    color: blue;
}
",
  "assets/d.css": "
/* packages/rollup/test/specimens/manual-chunks/d.css */
",
  "assets/shared.css": "
/* packages/rollup/test/specimens/manual-chunks/c.css */
.mc_c {
    color: green;
    background: darkred;
}
",
}
`;

exports[`/rollup.js code splitting should support outputting metadata about CSS dependencies 1`] = `
Object {
  "assets/a.css": "
/* packages/rollup/test/specimens/metadata/a.css */
.mc_a { color: aqua; }
",
  "assets/b.css": "
/* packages/rollup/test/specimens/metadata/b.css */
.mc_b { color: blue; }
",
  "assets/d.css": "
/* packages/rollup/test/specimens/metadata/d.css */
.mc_d { color: darkkhaki; }
",
  "assets/metadata.json": "
{
    \\"a.js\\": {
        \\"assets\\": [
            \\"assets/a.css\\"
        ]
    },
    \\"b.js\\": {
        \\"assets\\": [
            \\"assets/b.css\\"
        ]
    },
    \\"d.js\\": {
        \\"assets\\": [
            \\"assets/d.css\\"
        ]
    }
}",
}
`;

exports[`/rollup.js code splitting should support outputting metadata about CSS dependencies to a named file  1`] = `
Object {
  "assets/a.css": "
/* packages/rollup/test/specimens/metadata/a.css */
.mc_a { color: aqua; }
",
  "assets/b.css": "
/* packages/rollup/test/specimens/metadata/b.css */
.mc_b { color: blue; }
",
  "assets/chunks.json": "
{
    \\"a.js\\": {
        \\"assets\\": [
            \\"assets/a.css\\"
        ]
    },
    \\"b.js\\": {
        \\"assets\\": [
            \\"assets/b.css\\"
        ]
    },
    \\"d.js\\": {
        \\"assets\\": [
            \\"assets/d.css\\"
        ]
    }
}",
  "assets/d.css": "
/* packages/rollup/test/specimens/metadata/d.css */
.mc_d { color: darkkhaki; }
",
}
`;

exports[`/rollup.js code splitting should support splitting up CSS files 1`] = `
Object {
  "assets/dependencies.css": "
/* packages/rollup/test/specimens/dependencies.css */
.mc_wooga {
    background: blue;
}
",
  "assets/simple.css": "
/* packages/rollup/test/specimens/simple.css */
.mc_fooga {
    color: red;
}
",
}
`;

exports[`/rollup.js code splitting should support splitting up CSS files w/ shared assets 1`] = `
Object {
  "assets/a.css": "
/* packages/rollup/test/specimens/css-chunks/a.css */
.mc_a {
    color: aqua;
}
",
  "assets/b.css": "
/* packages/rollup/test/specimens/css-chunks/b.css */
.mc_b {
    color: blue;
}
",
  "assets/c.css": "
/* packages/rollup/test/specimens/css-chunks/shared.css */
.mc_shared {
    color: snow;
}
/* packages/rollup/test/specimens/css-chunks/c.css */
.mc_c {
    color: cyan;
}
",
}
`;

exports[`/rollup.js code splitting shouldn't break when dynamic imports are tree-shaken away (rollup/rollup#2659) 1`] = `Object {}`;

exports[`/rollup.js code splitting shouldn't put bundle-specific CSS in common.css 1`] = `
Object {
  "assets/a.css": "
/* packages/rollup/test/specimens/common-splitting/shared.css */
.mc_shared {
    color: snow;
}
/* packages/rollup/test/specimens/common-splitting/a.css */
.mc_a {
    color: aqua;
}
.mc_a2 {
    color: azure;
}
/* packages/rollup/test/specimens/common-splitting/shared3.css */
.mc_shared3 {
    color: saddlebrown;
}
/* packages/rollup/test/specimens/common-splitting/b.css */
.mc_b {
    color: blue;
}
.mc_b2 {
    color: blanchedalmond;
}
",
  "assets/c.css": "
/* packages/rollup/test/specimens/common-splitting/c.css */
.mc_c {
    color: cyan;
}

.mc_c2 {
    color: crimson;
}",
  "assets/shared2.css": "
/* packages/rollup/test/specimens/common-splitting/shared2.css */
.mc_shared2 {
    color: sandybrown;
}
",
}
`;

exports[`/rollup.js code splitting shouldn't use entry hashes as part of the CSS file names 1`] = `
Object {
  "assets/simple-0a80c138.css": "
/* packages/rollup/test/specimens/simple.css */
.mc_fooga {
    color: red;
}
",
  "simple.43108c99.js": "
const str = \\"\\\\\\"string\\\\\\"\\";
const fooga = \\"mc_fooga\\";
var css = {
    \\"str\\" : str,
\\"fooga\\" : fooga
};

console.log(css);
",
}
`;
